--- a/cleaning and data visualization .ipynb
+++ b/cleaning and data visualization .ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 19,
    "id": "8141b28c",
    "metadata": {},
    "outputs": [],
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 20,
    "id": "6d898e9f",
    "metadata": {},
    "outputs": [
@@ -28,7 +28,7 @@
        "(10661, 33)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 21,
    "id": "30c969f3-bb05-49ea-aa7f-edbaa7033561",
    "metadata": {},
    "outputs": [
@@ -89,7 +89,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -101,30 +101,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 22,
    "id": "2898e0fb-26f0-49e0-9e8e-9826c758bf9d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(10661, 27)"
+       "(10661, 26)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# drop columns with large amount of missing values\n",
-    "df_combined = df_combined.drop(['Region', 'Internal Park Tags', 'ExternalLinks', 'Ozone', 'Park Tags', 'Nativeness Tags'], axis=1)\n",
+    "df_combined = df_combined.drop(['Region', 'Internal Park Tags', 'ExternalLinks', 'Ozone', 'Park Tags', 'Nativeness Tags', 'Occurrence Tags'], axis=1)\n",
     "df_combined.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 23,
    "id": "135c1ea4-35d2-4601-9281-37e01c62ffe6",
    "metadata": {},
    "outputs": [
@@ -139,7 +139,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -150,17 +150,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 24,
    "id": "661ad49c-1e5f-4c32-96b1-cf964a99522c",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(10070, 27)"
+       "(10070, 26)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -169,6 +169,63 @@
     "# drop species not in park or unconfirmed\n",
     "df_combined = df_combined[~df_combined['Occurrence'].isin(['Not In Park', 'Unconfirmed'])]\n",
     "df_combined.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "ed51323c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Park Code                 0\n",
+       "Park Name                 0\n",
+       "Category                  0\n",
+       "Category Sort             0\n",
+       "Order                   499\n",
+       "Family                  503\n",
+       "Taxon Code                0\n",
+       "TSN                      42\n",
+       "Taxon Record Status       0\n",
+       "Scientific Name           0\n",
+       "Common Names           4158\n",
+       "Synonyms               9428\n",
+       "Park Accepted             0\n",
+       "Sens?                     0\n",
+       "Record Status             0\n",
+       "Occurrence             5315\n",
+       "Nativeness             5317\n",
+       "Abundance              5785\n",
+       "NPS Tags               8715\n",
+       "References              565\n",
+       "Observations           9081\n",
+       "Vouchers               6674\n",
+       "T&E                    9296\n",
+       "State Status           9902\n",
+       "GRank                  4719\n",
+       "SRank                  5869\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_combined.isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "e4e88945",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_combined.to_csv('parks_combined.csv', index=False)"
    ]
   },
   {
