--- a/nidhi-interactive.ipynb
+++ b/nidhi-interactive.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 1,
    "id": "8141b28c",
    "metadata": {
     "is_executing": true
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 2,
    "id": "6d898e9f",
    "metadata": {},
    "outputs": [
@@ -31,7 +31,7 @@
        "(10661, 33)"
       ]
      },
-     "execution_count": 98,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 3,
    "id": "30c969f3-bb05-49ea-aa7f-edbaa7033561",
    "metadata": {},
    "outputs": [
@@ -92,7 +92,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 99,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 4,
    "id": "2898e0fb-26f0-49e0-9e8e-9826c758bf9d",
    "metadata": {},
    "outputs": [
@@ -114,7 +114,7 @@
        "(10661, 26)"
       ]
      },
-     "execution_count": 100,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 5,
    "id": "661ad49c-1e5f-4c32-96b1-cf964a99522c",
    "metadata": {},
    "outputs": [
@@ -137,7 +137,7 @@
        "(10070, 26)"
       ]
      },
-     "execution_count": 101,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "aa709b55",
    "metadata": {},
    "outputs": [],
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 7,
    "id": "c22bb873",
    "metadata": {},
    "outputs": [
@@ -1310,7 +1310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 8,
    "id": "f3ca0ec0",
    "metadata": {},
    "outputs": [
@@ -6772,7 +6772,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 9,
    "id": "cda70aff",
    "metadata": {},
    "outputs": [
@@ -11388,7 +11388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 10,
    "id": "09595fe2",
    "metadata": {},
    "outputs": [
@@ -14772,8 +14772,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "c962a5d3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_combined.head().to_html('df_head.html')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "053c7783",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8ebc5a39",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "00102d23",
    "metadata": {},
    "outputs": [],
    "source": []
