fixed color map

--- a/nidhi-interactive.ipynb
+++ b/nidhi-interactive.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "8141b28c",
    "metadata": {
     "is_executing": true
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "6d898e9f",
    "metadata": {},
    "outputs": [
@@ -31,7 +31,7 @@
        "(10661, 33)"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "30c969f3-bb05-49ea-aa7f-edbaa7033561",
    "metadata": {},
    "outputs": [
@@ -92,7 +92,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "2898e0fb-26f0-49e0-9e8e-9826c758bf9d",
    "metadata": {},
    "outputs": [
@@ -114,7 +114,7 @@
        "(10661, 26)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "661ad49c-1e5f-4c32-96b1-cf964a99522c",
    "metadata": {},
    "outputs": [
@@ -137,7 +137,7 @@
        "(10070, 26)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "aa709b55",
    "metadata": {},
    "outputs": [],
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 8,
    "id": "e806dcc3",
    "metadata": {},
    "outputs": [
@@ -345,34 +345,34 @@
          },
          "node": {
           "color": [
-           "blue",
-           "blue",
-           "blue",
-           "blue",
-           "blue",
-           "green",
-           "green",
-           "green",
-           "green",
-           "green",
-           "green",
-           "green",
-           "green",
-           "green",
-           "green",
-           "green",
-           "green",
-           "green",
-           "green",
-           "green",
-           "green",
-           "green",
-           "green",
-           "green",
-           "green",
-           "red",
-           "red",
-           "red"
+           "#9ecae1",
+           "#9ecae1",
+           "#9ecae1",
+           "#9ecae1",
+           "#9ecae1",
+           "#4292c6",
+           "#4292c6",
+           "#4292c6",
+           "#4292c6",
+           "#4292c6",
+           "#4292c6",
+           "#4292c6",
+           "#4292c6",
+           "#4292c6",
+           "#4292c6",
+           "#4292c6",
+           "#4292c6",
+           "#4292c6",
+           "#4292c6",
+           "#4292c6",
+           "#4292c6",
+           "#4292c6",
+           "#4292c6",
+           "#4292c6",
+           "#4292c6",
+           "#08519c",
+           "#08519c",
+           "#08519c"
           ],
           "label": [
            "Amphibian",
@@ -1308,9 +1308,9 @@
     "links['target'] = links['target'].map(nodes_dict)\n",
     "\n",
     "# Create a color map for nodes\n",
-    "order_color = 'blue'\n",
-    "family_color = 'green'\n",
-    "genus_color = 'red'\n",
+    "order_color = '#9ecae1'\n",
+    "family_color = '#4292c6'\n",
+    "genus_color = '#08519c'\n",
     "\n",
     "# Assign colors to nodes\n",
     "node_colors = []\n",
